--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SectionRecyclerViewTest</string>
 
-    <string name="item_section_footer">浏览&#160;%1$s&#160;人</string>
+    <string name="item_section_footer">浏览&#160;%s&#160;人</string>
 </resources>
